# vol-surface-pipeline

./: .env.example  .gitignore  Dockerfile.airflow  Dockerfile.fastapi  PLANNING.md  README.md  airflow-entrypoint.sh  docker-compose.yml  flake.nix  hello.py  pyproject.toml
airflow/dags/: options_pipeline_dag.py
docs/: architecture.md
grafana/dashboards/: vol_surface.json
grafana/datasources/: duckdb.yaml  json.yaml
pipeline/ingestion/: fetch_macro.py  fetch_options.py
pipeline/serving/: api.py
pipeline/storage/: minio_client.py
pipeline/transform/: clean.py  iv_surface.py  load_duckdb.py
queries/: atm_vol_timeseries.sql  cross_ticker_comparison.sql  term_structure.sql  vol_smile.sql
tests/: test_iv_surface.py
